Add authentication JWT
